--- a/readMe.me
+++ b/readMe.me
@@ -1,1 +1,11 @@
+# Manfra
+
 https://manfra.netlify.app/
+
+
+| Personne            | Rôle                      | Github                                   | Linkedin                                                                               |
+| ------------------- | ------------------------- | ---------------------------------------- | -------------------------------------------------------------------------------------- |
+| Mabrouki Rayane     | FrontEnd | [@Rayane](https://github.com/Setsudan) | [Launay Ethan](https://linkedin.com/in/rayane-mabrouki/)                       |
+| SAINTE MARIE Jessica   | FrontEnd                  | [@Jessica](https://github.com/JessicaMarieSainte)   | [SAINTE MARIE Jessica](https://www.linkedin.com/in/jessica-marie-sainte/)             |
+| DOBROVOLSKYY Arsène | FrontEnd          | [@Daiiruin](https://github.com/Daiiruin) | [DOBROVOLSKYY Arsène](https://www.linkedin.com/in/ars%C3%A8ne-dobrovolskyy-458045226/) |
+| VOJINOVIC Veljko    | FrontEnd         | [@V-eljko](https://github.com/V-eljko)   | [Vojinovic Veljko](https://www.linkedin.com/in/veljko-vojinovic-365823226/)            |
